Release plugin version 1.13
Also update README.md.